shimlang/test_scripts/errors/struct_method_body_error.stderr
 2 |     x
 3 |     fn bad(self) {
 4 |         self.x + "string";
                    ^
 5 |     }
 6 | }
Error: Operation '+' not supported between Integer(1) and String(6, 0, u24([0, 0, 20]))
